Tue Aug 26 11:18:52 1997  Jeffrey A Law  (law@cygnus.com)

	* libtxi/Makefile.in: Add dependencies for memcpy, memmove and strdup.

Mon Jul 28 17:26:48 1997  Rob Savoye  <rob@chinadoll.cygnus.com>

	* aclocal.m4: Add CYGWIN and EXEEXT autoconf macros.
        * configure.in: Use CYGWIN and EXEEXT autoconf macro to look for
        win32 dependencies.
        * configure: Regenerated with autoconf 2.12.
        * Makefile.in: Add $(EXEEXT) to all executables.
        * makeinfo/Makefile.in: Add $(EXEEXT) to all executables.
        * util/Makefile.in: Add $(EXEEXT) to all executables.

Mon May 26 12:44:43 1997  Ian Lance Taylor  <ian@cygnus.com>

	* texinfo.tex: Update to newest FSF version (2.201).

Fri Mar 14 15:05:17 1997  Karl Berry  <karl@cs.umb.edu>

	* info/terminal.c (terminal_prep_terminal): Only use OCRNL and
		ONLCR if they are defined.  Reported by many people.

Wed Feb 12 11:15:16 1997  Michael Meissner  <meissner@cygnus.com>

	* util/texindex.c (main): Make main an int function, not void.

Sat Jun 29 18:56:07 1996  Geoffrey Noer  <noer@cygnus.com>

	* configure.in: if ac_cv_c_cross is yes, don't run the
	AC_FUNC_SETVBUF_REVERSED call since it tries to do a run
	test.  This allows texinfo to build for cygwin32 Canadian
	crosses/natives
	* configure: regenerate

Wed Jun 26 12:48:10 1996  Jason Molenda  (crash@godzilla.cygnus.co.jp)

	* Makefile.in (bindir, libdir, mandir, infodir): Use autoconf-set 
	values.
	* configure.in (AC_PREREQ): autoconf 2.5 or higher.
	* configure: Rebuilt.
	* emacs/Makefile.in (bindir, libdir, mandir, infodir): Use
	autoconf-set values.
	* info/Makefile.in (bindir, libdir, mandir, infodir): Use
	autoconf-set values.
	* libtxi/Makefile.in (bindir, libdir, mandir, infodir): Use
	autoconf-set values.
	* makeinfo/Makefile.in (bindir, libdir, mandir, infodir):
	Use autoconf-set values.
	* util/Makefile.in (bindir, libdir, mandir, infodir): Use 
	autoconf-set values.

Fri Oct  4 07:49:49 1996  Karl Berry  <karl@cs.umb.edu>
